updates to handle multiple providers